--- a/template/interface_account.html
+++ b/template/interface_account.html
@@ -97,14 +97,19 @@
             
          <!--Center Column-->
          
-         <div class="well span8">
-              <h2><i class="icon-wrench" style="position:relative; top: 7px; right: 0px"></i> Manage Account</h2> 
-              <hr style="position:relative; top: -20px; right: 0px">
-        
-                <div class="btn-group" style="position:relative; top: -30px; right: 0px">
-                <button class="btn active">Account Information</button>
-                <button class="btn">Notifications</button> </div>
-            <div class="well"  style="position:relative; top: -30px; right: 0px">
+         <div class="span8">
+            
+                  <h3><i class="icon-wrench" style="position:relative; top: 7px; right: 0px"></i> Manage Account</h3> 
+                 
+             
+             <ul class="nav nav-tabs">
+  <li class="active">
+    <a href="interface_account.html">Account Information</a>
+  </li>
+  <li><a href="interface_notifications.html">Notifications</a></li>
+
+</ul>
+           
             
             <div class='row'>
             <div class="span6">
