--- a/template/interface_bank.html
+++ b/template/interface_bank.html
@@ -95,12 +95,15 @@
            &nbsp;  </div>
 
             <!--COLUMN-->
-          <div class="well span8">
+          <div class="span8">
             <h2><i class="icon-pencil" style="position:relative; top: 7px; right: 0px"></i> Add/Delete Bank Accounts</h2> 
               <hr style="position:relative; top: -20px; right: 0px">
               
-              <div class="span6">
-                  <h3>Primary Bank Account</h3>
+              <div class="span6">     <div class="navbar" style="margin-top:10px">
+                  <div class="navbar-inner">
+                      <h4>Primary Bank Account</h4>
+                  </div>
+              </div>
             <dl class="dl-horizontal">
               <dt>Account Holder Name</dt>
               <dd>Christopher T Paquette</dd>
@@ -125,7 +128,11 @@
             </div>
 
              <div class="span5">
-                 <h3>Secondary Bank Account</h3>
+                    <div class="navbar" style="margin-top:10px">
+                  <div class="navbar-inner">
+                      <h4>Secondary Bank Account</h4>
+                  </div>
+              </div>
               <dl class="dl-horizontal">
               <dt>Account Holder Name</dt>
               <dd>Christopher T Paquette</dd>
