--- a/template/interface_closed.html
+++ b/template/interface_closed.html
@@ -96,7 +96,7 @@
 
             <!--TRANSACTION COLUMN-->
             
-          <div class="well span9">
+          <div class="span8">
               <h3>Transaction History</h3>
 
             <form class="form-search">
