--- a/template/interface_credit.html
+++ b/template/interface_credit.html
@@ -95,12 +95,17 @@
            &nbsp;  </div>
 
             <!--COLUMN-->
-          <div class="well span8">
+          <div class="span8">
             <h2><i class="icon-pencil" style="position:relative; top: 7px; right: 0px"></i> Add/Delete Credit Cards</h2> 
               <hr style="position:relative; top: -20px; right: 0px">
               
               <div class="span6">
-              <h3>Primary Card</h3>
+                  <div class="navbar" style="margin-top:10px">
+                  <div class="navbar-inner">
+                      <h4>Primary Card</h4>
+                  </div>
+              </div>
+              
               <dl class="dl-horizontal">
               <dt>Cardholder Name</dt>
               <dd>Christopher T Paquette</dd>
@@ -127,7 +132,11 @@
             </div>
 
              <div class="span5">
-              <h3>Secondary Card</h3>
+                 <div class="navbar" style="margin-top:10px">
+                  <div class="navbar-inner">
+                      <h4>Secondary Card</h4>
+                  </div>
+              </div>
               <dl class="dl-horizontal">
               <dt>Cardholder Name</dt>
               <dd>Christopher T Paquette</dd>
