--- a/template/interface_help.html
+++ b/template/interface_help.html
@@ -96,7 +96,7 @@
             
             
             <!--CENTER COLUMN-->
-          <div class="well span8">
+          <div class="span8">
            <h3><i class="icon-wrench" style="position:relative; top: 7px; right: 0px"></i> Help</h3> 
               <hr style="position:relative; top: -20px; right: 0px">
 
