--- a/template/interface_notifications.html
+++ b/template/interface_notifications.html
@@ -97,16 +97,18 @@
 
 
 
-          <div class="well span9">
+          <div class="span8">
               
               <h3><i class="icon-wrench" style="position:relative; top: 7px; right: 0px"></i> Manage Account</h3> 
-              <hr style="position:relative; top: -20px; right: 0px">
+   
         
-                <div class="btn-group" style="position:relative; top: -30px; right: 0px">
-                <button class="btn"><a href="interface_account.html"></a>Account Information</button>
-                <button class="btn active"><a href="interface_notifications.html"></a>Notifications</button> </div>
-            <div class="well"  style="position:relative; top: -30px; right: 0px">
-            
+                <ul class="nav nav-tabs">
+  <li>
+    <a href="interface_account.html">Account Information</a>
+  </li>
+  <li  class="active"><a href="interface_notifications.html">Notifications</a></li>
+
+</ul>
                <div class="span6">
               
               <form>
