--- a/template/interface.html
+++ b/template/interface.html
@@ -180,7 +180,7 @@
                   
                   <div class="span3">
                   
-                  <div class="well span12">
+                  <div class="well span12" style="margin-left: 8px">
                       <div class="span4">
                       <img src="images/userprofileimg.jpg" alt="mozi" width="100" height="100"></div>
                       <div class="span8" style="padding-left: 6px">
