--- a/template/interface_friends.html
+++ b/template/interface_friends.html
@@ -96,15 +96,20 @@
 
             <!--TRANSACTION COLUMN-->
             
-          <div class="well span8">
-              <h2><i class="icon-search"></i> View All Friends</h2> 
+          <div class="span8">
+              <h2><i class="icon-search"></i> Search Friends</h2> 
             <form class="form-search">
            <input type="text" class="input-xlarge search-query">
-             <button type="submit" class="btn"><i class="icon-user"></i> Search All Friends</button>
+             <button type="submit" class="btn btn-primary"><i class="icon-user"></i> Search</button>
               </form>
-             
               
-              <h3>Favorite Friends</h3> <legend></legend>
+                 <div class="navbar" style="margin-top:10px">
+                  <div class="navbar-inner">
+                      <h4>Favorite Friends</h4>
+                  </div>
+              </div>
+             
+             
            
               <div class="row" style="padding-left:40px;">
                   <div class="span3">
@@ -217,7 +222,12 @@
               </div>
              
               
-              <h3>All Friends</h3> <legend></legend>
+               <div class="navbar" style="margin-top:10px">
+                  <div class="navbar-inner">
+                      <h4>All Friends</h4>
+                  </div>
+              </div>
+             
               
               <div class="row" style="padding-left:40px;">
                    <div class="span2">
