lock, reset, FAQ, account

--- a/template/interface_account.html
+++ b/template/interface_account.html
@@ -114,17 +114,17 @@
             <div class='row'>
             <div class="span6">
               <dl class="dl-horizontal">
-              <dt>Real Name</dt>
-              <dd>Chris Paquette</dd>
-              <dt>Mozi User Name</dt>
+              <dt>First Name</dt>
+              <dd>Christopher</dd>
+              <dt>Last Name</dt>
+              <dd>Paquette</dd>
+              <dt>Mozi Username</dt>
               <dd>ctpaquette</dd>
               <dt>E-mail Address</dt>
               <dd>ctpaquette@gmail.com</dt>
               <dt>Password</dt>
-              <dd>******** <a href="#"><small>reset password</small></a></dd>
+              <dd>******** <a href="#"><small>change password</small></a></dd>
               <dt></dt>
-              <dt>Location</dt>
-              <dd>Binghamton, NY <small>(auto-detected, click <u>here</u> to update)</small></dd>
             
               </dl>
 
