--- a/template/FAQ.html
+++ b/template/FAQ.html
@@ -12,7 +12,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
-        padding-top: 60px;
+        padding-top: 45px;
         padding-bottom: 40px;
       }
     </style>
@@ -33,7 +33,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar  navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -41,18 +41,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html"><img src="images/favicon_white.png" alt="mozi" width="23" height=
-            "23"></a></a>
+          <a class="brand" href="#"><img src="images/favicon.png" alt="mozi" width="23" height=
+            "23" ALIGN="MIDDLE"></a></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="#about">Explore</a></li>
-              <li><a href="howitworks.html">How It Works</a></li>
-              <li><a href="hashtags.html">Hashtag Index</a><li>
-              <li class="active"><a href="FAQ.html">FAQ</a></li>
-              <li><a href="business.html">For Business</a></li>
-  
-              </li>
-            </ul>
+               <li><a href="howitworks.html">How It Works</a></li>
+              <li class="active"><a href="FAQ.html">FAQ & Fees</a></li>
+              <li><a href="business.html">About</a></li>
+                </ul>
             <form class="navbar-form pull-right">
               <input class="span2" type="text" placeholder="Email">
               <input class="span2" type="password" placeholder="Password">
@@ -62,12 +58,15 @@
         </div>
       </div>
     </div>
-    <div class="container">
+
+      
+      
+    <div class="container" style="margin-top:20px">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
      <div class="row-fluid">
       <div class="span8">
-        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > faq</h1></div>
+        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > faq & fees</h1></div>
       <div class="inline">
         <p align="right" style="position:relative; top: 25px; right: 0px"><button class="btn btn-large btn-primary" type="button">Join Now</button><strong> It's free!</strong></p>
       </div>
@@ -80,22 +79,33 @@
       <div class="row-fluid">
         <div class="span8">
      
-
-        <h2>How safe is Mozi?</h2>
-        <h4>Mozi is super safe.</h4>
-        <h2>What happens with your data?</h2>
-        <h4>We collect that shit and say fuck you while we make mad $$$</h4>
+        
+        <h3>How much does Mozi cost?</h3>
+        <p>It is <u>free</u> to join and receive funds using Mozi. In peer-to-peer transactions, the sender is charged 2.9% plus $.30 per transaction. This cost is automatically
+        calculated and deducted from your linked account. Users receiving payments are never charged for the transaction.</p>
+        <h3>How safe is Mozi?</h3>
+        <p>Mozi uses state-of-the-art and industry-standard 256-bit encryption processes to safeguard your account from unauthorized access. We monitor user accounts
+            continuously for suspicious access or activity. Mozi automatically notifies users via e-mail and/or text message when a possible intrusion is detected.
+            Mozi provides our users with the capability to freeze their account with one click, or by e-mail or phone. </p>
+        <h3>What does Mozi do with my financial information?</h3>
+        <p>Mozi takes all measures possible to protect the privacy and financial information of our users. All of our users information is stored in encrypted databases
+            that are virtually impossible to access. User information is tightly restricted and controlled so that only Mozi and our trusted payment network has permission to access your account.
+           </p>
+           <h3> What does Mozi do with my private information?</h3>
+           <p>We will never solicit your information or grant access to external parties. Mozi only uses your information for payment processing, account management, and identification 
+               purposes. Mozi prides itself with putting user privacy first and foremost.</p>
+           <h3>What account information can be seen by other users?</h3>
+           <p>The only element of your account information that Mozi provides other users is your Mozi username. Other users will be unable to search for you by identifiers
+               such as phone numbers, e-mail, and twitter handles. Other users, however, can send payments to your Mozi account using these other types of identifiers. At no
+           point is your payment information (credit card number, bank account information, etc.) ever used for initiating payments by other users. </p>
+            
 
         
         </div>
       
-      <div class="well span4">
+      <div class="span4">
 
-
-              
-              <h3 align="center">Safety</h3>
-              <h3 align="center">Simplicity</h3>
-
+          <img src="images/lock.jpg" style="margin-left: 55px">
 
           </div>
         </div>
