Fixing Template Stuff.

--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
 
 
     <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
@@ -24,11 +24,7 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- Fav and touch icons -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+    
                                    <link rel="shortcut icon" href="ico/favicon.png">
   </head>
 
@@ -68,7 +64,6 @@
           </div><!--/.nav-collapse -->
         </div>
       </div>
-    </div>
       
   <div class="jumbotron masthead">
   <div class="container">
@@ -185,7 +180,6 @@
   </div>
         
    
-    </div>
     
           
       
@@ -195,24 +189,6 @@
         <p>&copy; Mozi <a href="www.mozime.com">MoziMe.com</a> 2013</p>
      </div>
 
-   
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="C:/bootstrap-master/js/jquery.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-transition.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-alert.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-modal.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-dropdown.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-scrollspy.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-tab.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-tooltip.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-popover.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-button.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-collapse.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-carousel.js"></script>
-    <script src="C:/bootstrap-master/js/bootstrap-typeahead.js"></script>
 
   </body>
 </html>
