lock, reset, FAQ, account

--- a/template/FAQ.html
+++ b/template/FAQ.html
@@ -68,7 +68,7 @@
       <div class="span8">
         <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > faq & fees</h1></div>
       <div class="inline">
-        <p align="right" style="position:relative; top: 25px; right: 0px"><button class="btn btn-large btn-primary" type="button">Join Now</button><strong> It's free!</strong></p>
+        <p align="right" style="position:relative; top: 25px; right: 70px"><img src="images/free.png" style="position:relative; right: 10px;"><button class="btn btn-large btn-primary" type="button">Join Now</button></p>
       </div>
     
 
