--- a/template/password_reset.html
+++ b/template/password_reset.html
@@ -1,10 +1,4 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
-<html>
-   <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -38,13 +32,159 @@ and open the template in the editor.
                                    <link rel="shortcut icon" href="ico/favicon.png">
   </head>
 
-    <body>
-        <div class="well span5">
-            <h2>HELLO HELLO HELLO HELLO HELLO HELLO HELLO HELLO HELLO HELLO</h2>
+  <body>
+
+    <div class="navbar  navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+                <li> <a href="#"><img src="images/favicon_logo.png" alt="mozi" width="60" height=
+            "30" ALIGN="MIDDLE"></a></li>
+            <li>
+                 <input style="position: absolute; top: 10px" type="text" class="input-xlarge search-query" placeholder="Search friends or payments...">
+               </li>
+            </ul>
+             
+            
+                  
+                 <div style="float:right; padding-top: 3px" class="btn-group">
+                      <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                   <img src="images/settingicon.png" alt="mozi" width="15" height="15"> Account
+                      <span class="caret"></span>
+                        </a>
+                     <ul class="dropdown-menu">
+                      <!-- log in -->
+                            </ul>
+                    </div>
+              <p style="float:right; padding-top: 12px; padding-right: 10px;" >Chris Paquette</p>
+              <div style="float:right; padding-top: 8px; padding-right: 10px;"><img src="images/userprofileimg.jpg" alt="mozi" width="30" height=
+            "30"></div>
+                  
+            
+            
+           </div>
+           
+          </div><!--/.nav-collapse -->
         </div>
-        
-        
-        
-        
-    </body>
+      </div>
+  
+      
+       <div class="container-fluid">
+        <div class="row-fluid">
+          <div class="span3 bs-docs-sidebar">
+            <ul class="nav nav-list bs-docs-sidenav">
+              <li class="nav-header">myMozi Interface</li>
+              <li><a href="interface.html"><i class="icon-chevron-right"></i> Dashboard</a></li>
+              <li><a href="interface_closed.html"><i class="icon-chevron-right"></i> View All Transactions</a></li>
+              <li><a href="interface_friends.html"><i class="icon-chevron-right"></i> View All Friends</a></li>
+              <li ><a href="interface_credit.html"><i class="icon-chevron-right"></i> Add/Delete Credit Card</a></li>
+               <li><a href="interface_bank.html"><i class="icon-chevron-right"></i> Add/Delete Bank Account</a></li>
+              <li class="active"><a href="interface_account.html"><i class="icon-chevron-right"></i> Manage Mozi Account</a></li>
+              <li><a href="interface_help.html"><i class="icon-chevron-right"></i> Help</a></li>
+            </ul>
+          </div>
+          
+            
+         <div id="space" style="padding-bottom:15px;">
+           &nbsp;  </div>
+            
+            
+         <!--Center Column-->
+         
+         <div class="span8">
+            
+                  <h3><i class="icon-wrench" style="position:relative; top: 7px; right: 0px"></i> Manage Account</h3> 
+                 
+             
+             <ul class="nav nav-tabs">
+  <li class="active">
+    <a href="interface_account.html">Account Information</a>
+  </li>
+  <li><a href="interface_notifications.html">Notifications</a></li>
+
+</ul>
+           
+            
+            <div class='row'>
+            <div class="span6">
+              <dl class="dl-horizontal">
+              <dt>First Name</dt>
+              <dd>Christopher</dd>
+              <dt>Last Name</dt>
+              <dd>Paquette</dd>
+              <dt>Mozi Username</dt>
+              <dd>ctpaquette</dd>
+              <dt>E-mail Address</dt>
+              <dd>ctpaquette@gmail.com</dt>
+              <dt>Old Password</dt>
+              <dd><input type="password" class="input" placeholder=""></dd>
+              <dt>New Password</dt>
+              <dd><input type="password" class="input" placeholder=""></dd>
+              <dt>Re-type Password</dt>
+              <dd><input type="password" class="input" placeholder=""></dd>
+              <dt></dt>
+            
+              </dl>
+
+                <div align="center">
+                <p>
+                <button class="btn btn-info" type="button" ><i class="icon-edit"></i> Update Information</button></p>
+              </div>
+          </div>
+
+       
+                <div align="right">
+                <p>
+                  <button class="btn btn-warning" type="button"><i class="icon-warning-sign"></i> Freeze Account</button>
+                   </p>
+                   <p>
+                   <button class="btn btn-danger" type="button"><i class="icon-off"></i> Delete Account</button></p>
+
+                 </div>
+
+               </div> 
+      
+
+      </div>
+            </div>
+
+              </div>
+       
+       </div>
+
+
+         
+
+      <hr>
+
+      <footer>
+        <p>&copy; Mozi www.mozime.com 2012</p>
+      </footer>
+
+    </div><!--/.fluid-container-->
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="../assets/js/jquery.js"></script>
+    <script src="../assets/js/bootstrap-transition.js"></script>
+    <script src="../assets/js/bootstrap-alert.js"></script>
+    <script src="../assets/js/bootstrap-modal.js"></script>
+    <script src="../assets/js/bootstrap-dropdown.js"></script>
+    <script src="../assets/js/bootstrap-scrollspy.js"></script>
+    <script src="../assets/js/bootstrap-tab.js"></script>
+    <script src="../assets/js/bootstrap-tooltip.js"></script>
+    <script src="../assets/js/bootstrap-popover.js"></script>
+    <script src="../assets/js/bootstrap-button.js"></script>
+    <script src="../assets/js/bootstrap-collapse.js"></script>
+    <script src="../assets/js/bootstrap-carousel.js"></script>
+    <script src="../assets/js/bootstrap-typeahead.js"></script>
+
+  </body>
 </html>
