--- a/template/howitworks.html
+++ b/template/howitworks.html
@@ -9,7 +9,7 @@
 
 
     <!-- Le styles -->
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 45px;
@@ -65,10 +65,10 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
      <div class="row-fluid">
-      <div class="span8">
-        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px" > how it works</h1></div>
+      <div class="span7 offset1">
+        <h1><img src="images/mozi_logo.png" alt="Pulpit rock" width="200" height="150" style="position:relative; top: -20px; left: -20px" > how it works</h1></div>
       <div class="inline">
-        <p align="right" style="position:relative; top: 25px; right: 0px"><button class="btn btn-large btn-primary" type="button">Join Now</button><strong> It's free!</strong></p>
+        <p align="right" style="position:relative; top: 25px; right: 70px"><img src="images/free.png" style="position:relative; right: 10px;"><button class="btn btn-large btn-primary" type="button">Join Now</button></p>
       </div>
     
 
@@ -77,12 +77,36 @@
 
       <!-- Example row of columns -->
       <div class="row-fluid">
-        <div class="span8">
+        <div class="span7 offset1">
      
         
             <h2>Mozi lets you pay easier and safer</h2>
         <p>Transfer money between you and your friends with Mozi. Users enjoy simple one click transfers between friends on social media, as well as by e-mail
         and SMS. Send and request money from non-Mozi users as well. Best of all, it's free to join!</p>
+        
+        <img src="images/1signup.png">
+        <br><br>
+        <p>Sign up with a valid e-mail address to begin accepting payments from your friends. Once registered, users can link credit cards and bank accounts
+        to start paying other Mozi users as well as non-Mozi users.</p>
+        <img src="images/2link.png">
+        <br><br>
+        <p>Link your Mozi account to social media sites such as Twitter and Facebook to import your friends and start using one-click payments. Mozi lets users
+            send money to non-Mozi users through e-mail and SMS text message. </p>
+        <img src="images/3start.png">
+        <p>Once you have a payment account linked, you'll be able to send money to your friend across the table or friends half-way around the world with a single
+            click. Mozi offers secure and rapid payments at competitive rates from any device. Never get caught without enough cash. Mozi lets you conveniently pay 
+            directly from any of your accounts.</p>
+        
+         <hr class="soften">
+        
+        <h3>Sending Money</h3>
+        <p>Sending money is as easy as typing the name of your friend, entering the amount to send, and clicking send. Mozi also lets you write notes to help
+            communicate the purpose of the payment as well. When you click 'send', Mozi notifies the recipient and awaits confirmation. Recipients have <b>7 days</b> to accept funds, otherwise payment is cancelled. When accepted Mozi debits your primary account the amount specified and transmits it to the recipient.</p>
+        <h3>Receiving Money</h3>
+        <p>Receive money by simply clicking 'accept' on the notification that appears on your dashboard. You receive the money instantly and you'll be able to cash out the amount immediately, or leave it in your Mozi balance. Users are given <b>7 days</b> to accept the payment.</p>
+        <h3>Request Money</h3>
+        <p>Mozi lets you request funds from both users and non-users via social media, text or e-mail. Simply write the name, twitter handle, e-mail or phone number, and we'll notify the person
+            that you are requesting payment.</p>
         
         
     
@@ -90,8 +114,8 @@
         </div>
       
       <div class="span4">
-
-          <img src="images/lock.jpg" style="margin-left: 55px">
+          
+          <img src="images/cloud.png" style="margin-top: 25px">
 
           </div>
         </div>
