--- a/template/about.html
+++ b/template/about.html
@@ -65,68 +65,60 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
      <div class="row-fluid">
-      <div class="span11 offset">
+      <div class="span11">
         <img src="images/dummyAbout.png" alt="Pulpit rock"  style="position:relative; top: -20px; left: 100px" >
       </div>
-
 
       </div>
 
       <!-- Example row of columns -->
-      <div class="row-fluid">
-        <div class="span7 offset1">
      
-        
-            <h2>Mozi lets you pay easier and safer</h2>
-        <p>Transfer money between you and your friends with Mozi. Users enjoy simple one click transfers between friends on social media, as well as by e-mail
-        and SMS. Send and request money from non-Mozi users as well. Best of all, it's free to join!</p>
-        
-        <img src="images/1signup.png">
-        <br><br>
-        <p>Sign up with a valid e-mail address to begin accepting payments from your friends. Once registered, users can link credit cards and bank accounts
-        to start paying other Mozi users as well as non-Mozi users.</p>
-        <img src="images/2link.png">
-        <br><br>
-        <p>Link your Mozi account to social media sites such as Twitter and Facebook to import your friends and start using one-click payments. Mozi lets users
-            send money to non-Mozi users through e-mail and SMS text message. </p>
-        <img src="images/3start.png">
-        <p>Once you have a payment account linked, you'll be able to send money to your friend across the table or friends half-way around the world with a single
-            click. Mozi offers secure and rapid payments at competitive rates from any device. Never get caught without enough cash. Mozi lets you conveniently pay 
-            directly from any of your accounts.</p>
-        
-         <hr class="soften">
-        
-        <h3>Sending Money</h3>
-        <p>Sending money is as easy as typing the name of your friend, entering the amount to send, and clicking send. Mozi also lets you write notes to help
-            communicate the purpose of the payment as well. When you click 'send', Mozi notifies the recipient and awaits confirmation. Recipients have <b>7 days</b> to accept funds, otherwise payment is cancelled. When accepted Mozi debits your primary account the amount specified and transmits it to the recipient.</p>
-        <h3>Receiving Money</h3>
-        <p>Receive money by simply clicking 'accept' on the notification that appears on your dashboard. You receive the money instantly and you'll be able to cash out the amount immediately, or leave it in your Mozi balance. Users are given <b>7 days</b> to accept the payment.</p>
-        <h3>Request Money</h3>
-        <p>Mozi lets you request funds from both users and non-users via social media, text or e-mail. Simply write the name, twitter handle, e-mail or phone number, and we'll notify the person
-            that you are requesting payment.</p>
-        
-        
-    
-        
-        </div>
-      
-      <div class="span4">
-          
-          <img src="images/cloud.png" style="margin-top: 25px">
-
+          <div class="well span8" style="margin-left: 100px; position:absolute; top: 395px; width: 940px; background-color: #d4d4d4; padding-bottom: 1px;">
+              
+              
+             
           </div>
+          </div>
+       <div class="well span2" style="position: absolute; opacity: 1; top: 340px; left:550px; background-color: whiteSmoke; padding: 1px; padding-top: 0px; font-family: Helvetica; border-color: #666; border-width: 1px;">
+           <h3 style="text-align: center; color: #666"><img src="images/mozi_logo.png"</h3>
         </div>
+       
+      <div class="span9" style="margin-left: 21%; width: 1050; position: relative; top: 50px; font-family: Verdana">
+          <div class="row">
+          <div class="span4">
+              <h4 style="text-align: center">Chris Paquette</h4>
+              <h4 style="text-align: center"><small>CO-FOUNDER</small></h4>
+              <h4 style="text-align: center"><small>@mozichris</small></h4>
+              <hr class="soften" style="color: black">
+    </div>
+              
+          <div class="span4">
+              <h4 style="text-align: center">Mohamed Nouh</h4>
+              <h4 style="text-align: center"><small>CO-FOUNDER</small></h4>
+              <h4 style="text-align: center"><small>@mozimo</small></h4>
+              <hr class="soften">
+          </div>
+          </div>
+      </div>
 
+       <div class="span8" style="margin-left: 21%; width: 900; position: relative; top: 50px; font-family: Verdana; text-align: justify;">
+           <p>Mozi was created in December of 2012 by Chris Paquette and Mohamed Nouh while both were students at the State University of New York at Binghamton.
+               Understanding the need for a simple, no-hassle payment system, the duo developed Mozi with the aims to create a low-cost solution that could be integrated
+               with social media. The vision for Mozi goes beyond the P2P payment we enjoy today--the two are busily at work creating new payment solutions that they 
+               hope will redefine how money is transfered in all situations.</p>
+           
+       </div>
       
-   
-      <hr>
-
-      <footer>
-        <p>&copy; Mozi <a href="www.mozime.com">MoziMe.com</a> 2013</p>
-      </footer>
-
-    </div> <!-- /container -->
-
+      <br><br>
+      
+      <div class="span8" style="margin-left: 21%; width: 900; position: relative; top: 50px; font-family: Verdana; text-align: justify;">
+          <h3 style="text-align: center;">Contact</h3>
+          <hr class="soften" style=" position:relative; top:-10px">
+          <p style="text-align: center">chris@mozime.com</p>
+          <p style="text-align: center">mo@mozime.com</p>
+           
+       </div>
+          
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
