--- a/template/tooltip_search.html
+++ b/template/tooltip_search.html
@@ -43,7 +43,7 @@
        
             <div class="span2" style="font-family: Verdana; margin-left:0px">
                 <b>John Boston</b> <br>
-                <small style="color: #0099CC"><img src="http://mozime.com/images/favicon.png" width="20px"> dickcissel<small>
+                <small style="color: #0099CC"><img src="http://mozime.com/images/favicon.png" width="20"> dickcissel<small>
             </div>
           
           </div>
