--- a/css/index.css
+++ b/css/index.css
@@ -1139,7 +1139,6 @@ input[type="color"],
           transition: border linear 0.2s, box-shadow linear 0.2s;
 }
 
-textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="datetime"]:focus,
@@ -6090,4 +6089,47 @@ a.badge:hover {
 
 .affix {
   position: fixed;
+}
+
+.entry:hover {
+    
+    background-color: #f5f5f5;
+    
+}
+
+.entry.warning {
+    background-color: #fcf8e3;  
+}
+
+.entry.warning:hover {
+    background-color: #faf2cc;
+    
+}
+
+#onebox_details {
+    padding: 5px 35px 5px 0px;
+    border:medium none;
+    margin:0;
+    height:37px;
+    outline:0 none;
+    overflow:auto;
+    width:91%;
+    border:1px solid none;
+    overflow-y:hidden;
+    resize: none;
+    background: transparent;
+}
+
+.paddingDollar {
+padding: 5px 2px 5px 6px !important;
+}
+
+.med_gray_box {
+border: 1px solid #A6A6A6;
+}
+
+#onebox_characters_left {
+    font-size:20px;
+    color:#999;
+    font-weight:bold;
 }
