--- a/template/index.html
+++ b/template/index.html
@@ -73,9 +73,9 @@
       </div>  
       
       <div class="span 8" style="padding-top: 75px">
-          <h1>Gotta pay a friend?</h1>
-          <h2>Send money with ease using</h2>
-          <h2 style="position:relative; top: -10px; right: 0px">Facebook, Twitter, E-mail or SMS Text</h2>
+          <h1 style="color: #000033">Gotta pay a friend?</h1>
+          <h2 style="color: #000033">Send money with ease using</h2>
+          <h2 style="color: #000033; position:relative; top: -10px; right: 0px">Facebook, Twitter, E-mail or SMS Text</h2>
         
           <div class="row">
           <a href="howitworks.html" class="btn btn-primary btn-large">Learn about Mozi</a>
@@ -103,16 +103,15 @@
     </ul>
   </div>
 </div>
+   
     
-        <div id="space" style="padding-bottom:0px;">
-           &nbsp;  </div>
-    
-    
-    
- <div class="container">
+ <div class="container" style="padding: 30px 10px 30px 10px; margin: 0px 0px 0px 0px; background-color: #000033;
+  -webkit-box-shadow: 2px 2px 4px 1px #fff;
+    box-shadow: 2px 2px 4px 1px #fff;
+    width: 100%; height: 100%;">
   <div class="marketing">
-    <h1 style="text-align: center; color: #222222">Welcome to Mozi.</h1>
-    <h3 style="text-align: center; color: #5a5a5a">The friend-to-friend payment network that's as <u>safe</u> as it <u>simple</u> to use.</h3>
+    <h1 style="text-align: center; color: white">Welcome to Mozi.</h1>
+    <h3 style="text-align: center; color: white">The peer-to-peer payment network that's as <u>safe</u> as it <u>simple</u> to use.</h3>
     
      <div id="space" style="padding-bottom:25px;">
            &nbsp;  </div>
@@ -120,20 +119,20 @@
      <div class="row-fluid">
         <div class="span4" style="text-align: center; padding-left: 0px">
             <img src="images/icon_social.png" style="padding-bottom: 13px; padding-top: 20px;">
-        <h2>Simple</h2>
-        <h5>Pay friends via social media, e-mail and text message with a single click.</h5>
+        <h2 style="color: white">Simple</h2>
+        <h5 style="color: white">Pay friends via social media, e-mail and text message with a single click.</h5>
         </div>
         
         <div class="span4" style="text-align: center">
-        <img src="images/icon_secure.jpg">
-        <h2>Secure</h2>
-        <h5>Mozi uses industry-standard 256-bit SSL Encryption for <u>all</u> account accesses and transactions</h5>
+        <img src="images/icon_credit.png">
+        <h2 style="color: white">Secure</h2>
+        <h5 style="color: white">Mozi uses industry-standard 256-bit SSL Encryption for <u>all</u> account accesses and transactions</h5>
         </div>
         
         <div class="span4" style="text-align: center">
             <img src="images/icon_mobile.png" style="padding-bottom: 13px; padding-top: 20px;">
-            <h2>Mobile</h2>
-            <h5>Send money via computer, SMS text message and even Twitter!</h5>
+            <h2 style="color: white">Mobile</h2>
+            <h5 style="color: white">Send money via computer, SMS text message and even Twitter!</h5>
         </div>
      </div>
     
@@ -147,6 +146,7 @@
   <div class="marketing">
     
     <h1 style="text-align: center; font-size: 40px; color: black;">A few ways our friends use Mozi...</h1>
+      <hr class="soften" style="margin-bottom: 0px; padding-bottom:0px;">
     
        <div id="space" style="padding-bottom:25px;">
            &nbsp;  </div>
