--- a/template/index.html
+++ b/template/index.html
@@ -74,8 +74,8 @@
       
       <div class="span 8" style="padding-top: 75px">
           <h1 style="color: #000033">Gotta pay a friend?</h1>
-          <h2 style="color: #000033">Send money with ease using</h2>
-          <h2 style="color: #000033; position:relative; top: -10px; right: 0px">Facebook, Twitter, E-mail or SMS Text</h2>
+          <h2 style="color: #0e509e">Send money with ease using</h2>
+          <h2 style="color: #0e509e; position:relative; top: -10px; right: 0px">Facebook, Twitter, E-mail or SMS Text</h2>
         
           <div class="row">
           <a href="howitworks.html" class="btn btn-primary btn-large">Learn about Mozi</a>
@@ -85,8 +85,8 @@
   </div>
  
 </div>
-<div class="bs-docs-social">
-  <div class="container">
+<div class="bs-docs-social" style="border-top-width: 1px; border-color: #999; background-image: url(images/metal-textureocts.png); background-repeat: repeat;">
+  <div class="container" >
     <ul class="bs-docs-social-buttons">
       <li>
         <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twitter&repo=bootstrap&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
@@ -105,32 +105,38 @@
 </div>
    
     
- <div class="container" style="padding: 30px 10px 30px 10px; margin: 0px 0px 0px 0px; background-color: #000033;
-  -webkit-box-shadow: 2px 2px 4px 1px #fff;
-    box-shadow: 2px 2px 4px 1px #fff;
+ <div class="container" style="padding-bottom: 70px; padding-top: 40px; margin: 0px 0px 0px 0px; background: #00032a; /* Old browsers */
+background: -moz-linear-gradient(top,  #00032a 0%, #000042 15%, #000042 85%, #00032a 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00032a), color-stop(15%,#000042), color-stop(85%,#000042), color-stop(100%,#00032a)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #00032a 0%,#000042 15%,#000042 85%,#00032a 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #00032a 0%,#000042 15%,#000042 85%,#00032a 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #00032a 0%,#000042 15%,#000042 85%,#00032a 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #00032a 0%,#000042 15%,#000042 85%,#00032a 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00032a', endColorstr='#00032a',GradientType=0 ); /* IE6-9 */
+
     width: 100%; height: 100%;">
   <div class="marketing">
-    <h1 style="text-align: center; color: white">Welcome to Mozi.</h1>
-    <h3 style="text-align: center; color: white">The peer-to-peer payment network that's as <u>safe</u> as it <u>simple</u> to use.</h3>
+    <h1 style="text-align: center; color: white; padding-bottom: 30px">Welcome to Mozi.</h1>
+    <h3 style="text-align: center; color: white; padding-bottom: 30px">The peer-to-peer payment network that's as <u>safe</u> as it is <u>simple</u> to use.</h3>
     
      <div id="space" style="padding-bottom:25px;">
            &nbsp;  </div>
     
      <div class="row-fluid">
         <div class="span4" style="text-align: center; padding-left: 0px">
-            <img src="images/icon_social.png" style="padding-bottom: 13px; padding-top: 20px;">
+            <img src="images/icon_socialglow.png">
         <h2 style="color: white">Simple</h2>
         <h5 style="color: white">Pay friends via social media, e-mail and text message with a single click.</h5>
         </div>
         
         <div class="span4" style="text-align: center">
-        <img src="images/icon_credit.png">
+        <img src="images/icon_credcard.png">
         <h2 style="color: white">Secure</h2>
         <h5 style="color: white">Mozi uses industry-standard 256-bit SSL Encryption for <u>all</u> account accesses and transactions</h5>
         </div>
         
         <div class="span4" style="text-align: center">
-            <img src="images/icon_mobile.png" style="padding-bottom: 13px; padding-top: 20px;">
+            <img src="images/icon_mobile1.png" style="padding-bottom: 1px;">
             <h2 style="color: white">Mobile</h2>
             <h5 style="color: white">Send money via computer, SMS text message and even Twitter!</h5>
         </div>
@@ -145,7 +151,7 @@
   <div class="container">
   <div class="marketing">
     
-    <h1 style="text-align: center; font-size: 40px; color: black;">A few ways our friends use Mozi...</h1>
+    <h1 style="text-align: center; font-size: 40px; color: black; margin-bottom: 0px;">A few ways our friends use Mozi...</h1>
       <hr class="soften" style="margin-bottom: 0px; padding-bottom:0px;">
     
        <div id="space" style="padding-bottom:25px;">
