--- a/template/index.html
+++ b/template/index.html
@@ -68,14 +68,14 @@
   <div class="jumbotron masthead">
   <div class="container">
      
-      <div class="span 4" style="padding-top: 30px"> 
+      <div class="span 4" style="padding-top: 30px; width: 30%;"> 
            <img src="images/mozihandx.png" alt="Mozi Hand" style="position:relative; top: 0px; right: 0px">
       </div>  
       
-      <div class="span 8" style="padding-top: 75px">
-          <h1 style="color: #000033">Gotta pay a friend?</h1>
-          <h2 style="color: #0e509e">Send money with ease using</h2>
-          <h2 style="color: #0e509e; position:relative; top: -10px; right: 0px">Facebook, Twitter, E-mail or SMS Text</h2>
+      <div class="span 7" style="padding-top: 75px;">
+          <h1 style="color: #000033; width: 100%">Gotta pay a friend?</h1>
+          <h2 style="color: #0e509e; width: 100%">Send money with ease using</h2>
+          <h2 style="color: #0e509e; position:relative; top: -10px; right: 0px; width: 100%">Facebook, Twitter, E-mail or SMS Text</h2>
         
           <div class="row">
           <a href="howitworks.html" class="btn btn-primary btn-large">Learn about Mozi</a>
